src/test/resources/syntactic/error/TC_ERROR_LEXICO.ru
/? ERROR: LEXICO
/? | NUMERO DE LINEA: | NUMERO DE COLUMNA: | DESCRIPCION: |
/? | LINEA 5 | COLUMNA 5 | Identificador invalido: @ |
start{
    @
}